Improved log extraction and parsing process by reading process output directly