@@ -2,17 +2,16 @@ package pwr.zpi.hotspotter.unit.repositoryanalysis.logprocessing;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.api.io.TempDir;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
-import pwr.zpi.hotspotter.common.exception.LogProcessingException;
 import pwr.zpi.hotspotter.repositoryanalysis.logprocessing.LogParser;
 import pwr.zpi.hotspotter.repositoryanalysis.logprocessing.model.Commit;
 import pwr.zpi.hotspotter.repositoryanalysis.logprocessing.model.FileChange;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -24,157 +23,142 @@ class LogParserTest {
     @InjectMocks
     private final LogParser parser = new LogParser();
 
-    private Path createTempLog(@TempDir Path tempDir, String content) throws IOException {
-        Path file = tempDir.resolve("log.txt");
-        Files.writeString(file, content);
-        return file;
-    }
-
     @Test
-    void parsesSingleCommit(@TempDir Path tempDir) throws IOException {
+    void parsesCommitsFromInputStream() {
         String log = """
-            [abcd1234] 2024-01-01
-            John Doe <john@example.com>
-            10 2 src/Main.java
+            [hash1] 2024-01-01
+            Author One <author1@example.com>
+            5 3 src/File1.java
+
+            [hash2] 2024-01-02
+            Author Two <author2@example.com>
+            10 2 src/File2.java
             """;
 
-        Path file = createTempLog(tempDir, log);
-        Stream<Commit> stream = parser.parseLogs(file);
+        InputStream inputStream = new ByteArrayInputStream(log.getBytes(StandardCharsets.UTF_8));
 
-        List<Commit> commits = stream.toList();
-        assertThat(commits).hasSize(1);
+        try (Stream<Commit> stream = parser.parseLogs(inputStream)) {
+            List<Commit> commits = stream.toList();
 
-        Commit c = commits.getFirst();
-
-        assertThat(c.hash()).isEqualTo("abcd1234");
-        assertThat(c.date()).isEqualTo("2024-01-01");
-        assertThat(c.author()).isEqualTo("John Doe");
-        assertThat(c.email()).isEqualTo("john@example.com");
-
-        assertThat(c.changedFiles()).hasSize(1);
-        FileChange fc = c.changedFiles().getFirst();
-        assertThat(fc.filePath()).isEqualTo("src/Main.java");
-        assertThat(fc.linesAdded()).isEqualTo(10);
-        assertThat(fc.linesDeleted()).isEqualTo(2);
+            assertThat(commits).hasSize(2);
+            assertThat(commits.get(0).hash()).isEqualTo("hash1");
+            assertThat(commits.get(0).author()).isEqualTo("Author One");
+            assertThat(commits.get(1).hash()).isEqualTo("hash2");
+            assertThat(commits.get(1).author()).isEqualTo("Author Two");
+        }
     }
 
     @Test
-    void parsesMultipleCommits(@TempDir Path tempDir) throws IOException {
+    void skipsEmptyCommitsWhenParsingFromInputStream() {
         String log = """
-            [111] 2024-01-01
-            A <a@a.com>
-            1 1 A.java
+            [empty1] 2024-01-01
+            Empty Commit <empty@example.com>
 
-            [222] 2024-01-02
-            B <b@b.com>
-            2 3 B.java
+            [valid1] 2024-01-02
+            Valid Author <valid@example.com>
+            5 2 src/Main.java
+
+            [empty2] 2024-01-03
+            Another Empty <empty2@example.com>
             """;
 
-        Path file = createTempLog(tempDir, log);
+        InputStream inputStream = new ByteArrayInputStream(log.getBytes(StandardCharsets.UTF_8));
 
-        List<Commit> commits = parser.parseLogs(file).toList();
+        try (Stream<Commit> stream = parser.parseLogs(inputStream)) {
+            List<Commit> commits = stream.toList();
 
-        assertThat(commits).hasSize(2);
-        assertThat(commits.get(0).hash()).isEqualTo("111");
-        assertThat(commits.get(1).hash()).isEqualTo("222");
+            assertThat(commits).hasSize(1);
+            assertThat(commits.get(0).hash()).isEqualTo("valid1");
+        }
     }
 
     @Test
-    void parsesEmptyFileChangeBlock(@TempDir Path tempDir) throws IOException {
+    void parsesFileChangesFromInputStream() {
         String log = """
-            [abcd] 2024-01-01
-            John <j@x>
-            
+            [abc] 2024-01-01
+            Dev <dev@test.com>
+            10 5 src/Main.java
+            3 1 src/Utils.java
             """;
 
-        Path file = createTempLog(tempDir, log);
+        InputStream inputStream = new ByteArrayInputStream(log.getBytes(StandardCharsets.UTF_8));
 
-        Commit c = parser.parseLogs(file).findFirst().orElseThrow();
-        assertThat(c.changedFiles()).isEmpty();
+        try (Stream<Commit> stream = parser.parseLogs(inputStream)) {
+            Commit commit = stream.findFirst().orElseThrow();
+
+            assertThat(commit.changedFiles()).hasSize(2);
+            assertThat(commit.changedFiles().get(0).filePath()).isEqualTo("src/Main.java");
+            assertThat(commit.changedFiles().get(0).linesAdded()).isEqualTo(10);
+            assertThat(commit.changedFiles().get(0).linesDeleted()).isEqualTo(5);
+            assertThat(commit.changedFiles().get(1).filePath()).isEqualTo("src/Utils.java");
+        }
     }
 
     @Test
-    void parsesDashAsZeroInFileChanges(@TempDir Path tempDir) throws IOException {
+    void handlesFullRenameInInputStream() {
+        String log = """
+            [rename] 2024-01-01
+            Dev <dev@test.com>
+            5 3 old/File.java => new/File.java
+            """;
+
+        InputStream inputStream = new ByteArrayInputStream(log.getBytes(StandardCharsets.UTF_8));
+
+        try (Stream<Commit> stream = parser.parseLogs(inputStream)) {
+            FileChange fileChange = stream.findFirst()
+                    .orElseThrow()
+                    .changedFiles()
+                    .getFirst();
+
+            assertThat(fileChange.oldPath()).isEqualTo("old/File.java");
+            assertThat(fileChange.newPath()).isEqualTo("new/File.java");
+        }
+    }
+
+    @Test
+    void handlesPartialRenameInInputStream() {
+        String log = """
+            [rename] 2024-01-01
+            Dev <dev@test.com>
+            1 1 src/{old => new}/File.java
+            """;
+
+        InputStream inputStream = new ByteArrayInputStream(log.getBytes(StandardCharsets.UTF_8));
+
+        try (Stream<Commit> stream = parser.parseLogs(inputStream)) {
+            FileChange fileChange = stream.findFirst()
+                    .orElseThrow()
+                    .changedFiles()
+                    .getFirst();
+
+            assertThat(fileChange.oldPath()).isEqualTo("src/old/File.java");
+            assertThat(fileChange.newPath()).isEqualTo("src/new/File.java");
+        }
+    }
+
+    @Test
+    void parsesDashAsZeroInInputStream() {
         String log = """
             [abcd] 2024-01-01
             John <j@x>
             - - README.md
             """;
 
-        Path file = createTempLog(tempDir, log);
+        InputStream inputStream = new ByteArrayInputStream(log.getBytes(StandardCharsets.UTF_8));
 
-        Commit c = parser.parseLogs(file).findFirst().orElseThrow();
-        FileChange fc = c.changedFiles().getFirst();
+        try (Stream<Commit> stream = parser.parseLogs(inputStream)) {
+            FileChange fileChange = stream.findFirst()
+                    .orElseThrow()
+                    .changedFiles()
+                    .getFirst();
 
-        assertThat(fc.linesAdded()).isZero();
-        assertThat(fc.linesDeleted()).isZero();
+            assertThat(fileChange.linesAdded()).isZero();
+            assertThat(fileChange.linesDeleted()).isZero();
+        }
     }
 
     @Test
-    void detectsFullRename(@TempDir Path tempDir) throws IOException {
-        String log = """
-            [abcd] 2024-01-01
-            John <j@x>
-            5 3 old/path/File.java => new/path/File.java
-            """;
-
-        Path file = createTempLog(tempDir, log);
-
-        FileChange fc = parser.parseLogs(file)
-                .findFirst()
-                .orElseThrow()
-                .changedFiles()
-                .getFirst();
-
-        assertThat(fc.oldPath()).isEqualTo("old/path/File.java");
-        assertThat(fc.newPath()).isEqualTo("new/path/File.java");
-    }
-
-    @Test
-    void detectsPartialRename(@TempDir Path tempDir) throws IOException {
-        String log = """
-            [abcd] 2024-01-01
-            John <j@x>
-            1 1 src/{old => new}/File.java
-            """;
-
-        Path file = createTempLog(tempDir, log);
-
-        FileChange fc = parser.parseLogs(file)
-                .findFirst()
-                .orElseThrow()
-                .changedFiles()
-                .getFirst();
-
-        assertThat(fc.oldPath()).isEqualTo("src/old/File.java");
-        assertThat(fc.newPath()).isEqualTo("src/new/File.java");
-    }
-
-    @Test
-    void iteratorStopsCorrectlyAtEndOfFile(@TempDir Path tempDir) throws IOException {
-        String log = """
-            [hash] 2024-01-01
-            A <a>
-            1 1 A.java
-            """;
-
-        Path file = createTempLog(tempDir, log);
-
-        List<Commit> commits = parser.parseLogs(file).toList();
-        assertThat(commits).hasSize(1);
-    }
-
-    @Test
-    void throwsExceptionWhenFileCannotBeRead(@TempDir Path tempDir) {
-        Path nonExisting = tempDir.resolve("missing.txt");
-
-        assertThatThrownBy(() -> parser.parseLogs(nonExisting))
-                .isInstanceOf(LogProcessingException.class)
-                .hasMessageContaining("Failed to initialize commit stream");
-    }
-
-    @Test
-    void skipsInvalidCommitBlocks(@TempDir Path tempDir) throws IOException {
+    void skipsInvalidCommitBlocksInInputStream() {
         String log = """
             INVALID BLOCK WITHOUT HEADER
             1 1 A.java
@@ -184,11 +168,41 @@ class LogParserTest {
             1 1 B.java
             """;
 
-        Path file = createTempLog(tempDir, log);
+        InputStream inputStream = new ByteArrayInputStream(log.getBytes(StandardCharsets.UTF_8));
 
-        List<Commit> commits = parser.parseLogs(file).toList();
+        try (Stream<Commit> stream = parser.parseLogs(inputStream)) {
+            List<Commit> commits = stream.toList();
 
-        assertThat(commits).hasSize(1);
-        assertThat(commits.getFirst().hash()).isEqualTo("abcd");
+            assertThat(commits).hasSize(1);
+            assertThat(commits.getFirst().hash()).isEqualTo("abcd");
+        }
     }
+
+    @Test
+    void streamCanBeClosedProperly() {
+        String log = """
+            [test] 2024-01-01
+            Test <test@test.com>
+            1 1 test.java
+            """;
+
+        InputStream inputStream = new ByteArrayInputStream(log.getBytes(StandardCharsets.UTF_8));
+
+        assertThatCode(() -> {
+            try (Stream<Commit> stream = parser.parseLogs(inputStream)) {
+                assertThat(stream.count()).isEqualTo(1);
+            }
+        }).doesNotThrowAnyException();
+    }
+
+    @Test
+    void handlesEmptyInputStream() {
+        InputStream inputStream = new ByteArrayInputStream(new byte[0]);
+
+        try (Stream<Commit> stream = parser.parseLogs(inputStream)) {
+            List<Commit> commits = stream.toList();
+            assertThat(commits).isEmpty();
+        }
+    }
+
 }
